--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,7 +4,12 @@
 @import "global";
 
 .page {
-
+	@media (min-width: 1440px) {
+		background-image: linear-gradient(to right, #a1b7c8 24.5%, transparent 24%) !important;
+	}
+	@media (min-width: 2750px) {
+		background-image: linear-gradient(to right, #a1b7c8 30%, transparent 30%) !important;
+	}
 }
 
 .header {
@@ -12,7 +17,7 @@
 	@media (min-width: 768px) {
 		min-height: 100px;
 	}
-	@media (min-width: 992px) {
+	@media (min-width: 998px) {
 		position: fixed;
 		left: 0;
 		top: 0;
@@ -21,12 +26,13 @@
 		padding-bottom: 50px; */
 	}
 	&.page__header {
-		@media (min-width: 992px) {
+		@media (min-width: 998px) {
 			width: 240px;
 			position: fixed;
 			left: 0;
 			top: 0;
 			height: 100%;
+			padding: 0 20px;
 		}
 		@media (min-width: 1440px) {
 			width: 355px;
@@ -44,12 +50,12 @@
 			padding-top: 29px;
 			padding-bottom: 28px;
 		}
-		@media (min-width: 992px) {
+		@media (min-width: 998px) {
 			flex-direction: column;
-			height: 100%;
-			padding-top: 50px;
-			padding-bottom: 50px;
+			height: 100vh;
+			padding: 0px 20px;
 			align-items: flex-end;
+
 		}
 		@media (min-width: 1440px) {
 			flex-direction: column;
@@ -71,7 +77,9 @@
 		}
 		@media (min-width: 998px) {
 			display: block;
-			position: static;
+			/* position: static;
+			padding: 0; */ 
+			
 		}
 
 		&-list {
@@ -106,7 +114,7 @@
 		border: none;
 		outline: none;
 		padding: 0;
-		@media (min-width: 992px) {
+		@media (min-width: 998px) {
 			display: none;
 		}
 	}
@@ -150,15 +158,67 @@
 	}
 }
 
+section{
+	padding: 30px 0;
+	@media (min-width: 998px){
+		padding: 65px 0;
+	}
+	@media (min-width: 1440px){
+		padding: 75px 0;
+	}
+}
+
 .present {
+	@media (min-width: 768px) {
+		padding-top: 70px;
+			
+		}
+	@media (min-width: 998px) {
+			position: relative;
+			&::before{
+				content: '';
+				position: absolute;
+				left: 0;
+				top: 0;
+				display: block;
+				height: 100%;
+				width: 40%;
+				background-color: #A1B7C8;
+				z-index: -1;
+			}
+		}
+	&__container {
+		@media (min-width: 480px) {
+			display: flex;
+		}
+	}
 	&__photo {
 		width: 100%;
 		object-fit: cover;
 		object-position: center top;
-		overflow: hidden;
+		//overflow: hidden;
 		margin-bottom: 20px;
+		@media (min-width: 480px) {
+			width: 50%;
+			margin-right: 15px;
+			margin-bottom: 0;
+		}
+		@media (min-width: 768px) {
+			width: 370px;
+			margin-right: 27px;
+			
+		}
+		@media (min-width: 1440px) {
+			width: 445px;
+		}
 	}
 	&__content {
+		@media (min-width: 480px) {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: flex-start;
+		}
 	}
 	&__title {
 		font-weight: bold;
@@ -166,6 +226,18 @@
 		line-height: 120%;
 		text-transform: uppercase;
 		margin-bottom: 10px;
+		@media (min-width: 480px) {
+			font-size: 40px;
+		}
+		@media (min-width: 768px) {
+			font-size: 40px;
+		}
+		@media (min-width: 768px) {
+			margin-bottom: 24px;
+		}
+		@media (min-width: 1440px) {
+			margin-bottom: 20px;
+		}
 	}
 	&__suptitle {
 		margin-bottom: 18px;
@@ -173,22 +245,46 @@
 		font-size: 16px;
 		line-height: 120%;
 		text-transform: uppercase;
+		@media (min-width: 480px) {
+			font-size: 18px;
+		}
+		@media (min-width: 768px) {
+			margin-bottom: 40px;
+		}
+		@media (min-width: 1440px) {
+			font-size: 20px;
+			margin-bottom: 60px;
+		}
 	}
 	&__description {
 		margin-bottom: 20px;
+		@media (min-width: 480px) {
+			font-size: 16px;
+		}
+		@media (min-width: 768px) {
+			margin-bottom: 60px;
+		}
+		@media (min-width: 1440px) {
+			font-size: 18px;
+		}
 	}
 	&__order-btn {
 		background: #e87c40;
 		border-radius: 4px;
 		margin-bottom: 20px;
-		width: 190px;
-		height: 52px;
+		padding: 16px 60px;
 		border: none;
 		outline: none;
 		font-size: 14px;
 		line-height: 140%;
 		text-transform: uppercase;
 		color: #fff;
+		@media (min-width: 480px) {
+			font-size: 18px;
+		}
+		@media (min-width: 768px) {
+			padding: 24px 82px;
+		}
 	}
 }
 
