--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -55,7 +55,6 @@
 			height: 100vh;
 			padding: 0px 20px;
 			align-items: flex-end;
-
 		}
 		@media (min-width: 1440px) {
 			flex-direction: column;
@@ -78,8 +77,7 @@
 		@media (min-width: 998px) {
 			display: block;
 			/* position: static;
-			padding: 0; */ 
-			
+			padding: 0; */
 		}
 
 		&-list {
@@ -158,12 +156,12 @@
 	}
 }
 
-section{
+section {
 	padding: 30px 0;
-	@media (min-width: 998px){
+	@media (min-width: 998px) {
 		padding: 65px 0;
 	}
-	@media (min-width: 1440px){
+	@media (min-width: 1440px) {
 		padding: 75px 0;
 	}
 }
@@ -171,22 +169,21 @@ section{
 .present {
 	@media (min-width: 768px) {
 		padding-top: 70px;
-			
-		}
+	}
 	@media (min-width: 998px) {
-			position: relative;
-			&::before{
-				content: '';
-				position: absolute;
-				left: 0;
-				top: 0;
-				display: block;
-				height: 100%;
-				width: 40%;
-				background-color: #A1B7C8;
-				z-index: -1;
-			}
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			left: 0;
+			top: 0;
+			display: block;
+			height: 100%;
+			width: 40%;
+			background-color: #a1b7c8;
+			z-index: -1;
 		}
+	}
 	&__container {
 		@media (min-width: 480px) {
 			display: flex;
@@ -206,7 +203,6 @@ section{
 		@media (min-width: 768px) {
 			width: 370px;
 			margin-right: 27px;
-			
 		}
 		@media (min-width: 1440px) {
 			width: 445px;
@@ -285,6 +281,84 @@ section{
 		@media (min-width: 768px) {
 			padding: 24px 82px;
 		}
+	}
+}
+
+.advantages {
+	&__title {
+		font-weight: bold;
+		font-size: 50px;
+		line-height: 120%;
+		text-transform: uppercase;
+		color: #110303;
+		margin-bottom: 40px;
+		@media (min-width: 468px) {
+			font-size: 40px;
+		}
+		@media (min-width: 768px) {
+			margin-bottom: 50px;
+		}
+		@media (min-width: 1440px) {
+			font-size: 50px;
+		}
+	}
+	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 20px 50px;
+		justify-content: center;
+		@media (min-width: 468px) {
+			gap: 40px;
+		}
+		@media (min-width: 768px) {
+			justify-content: space-between;
+			gap: 80px;
+		}
+		@media (min-width: 1440px) {
+			justify-content: space-between;
+			gap: 1000px;
+		}
+		&-item {
+			flex-basis: 290px;
+			min-height: 61px;
+
+			font-size: 14px;
+			line-height: 140%;
+			padding: 10px 10px 10px 81px;
+			background-repeat: no-repeat;
+			background-size: 61px;
+			background-position: left center;
+			@media (min-width: 468px) {
+				font-size: 16px;
+			}
+			@media (min-width: 1440px) {
+				font-size: 18px;
+			}
+		}
+	}
+
+	&__stack {
+		background-image: url("../images/stack.svg");
+	}
+	&__mockup {
+		background-image: url("../images/mockup.svg");
+		order: 2;
+	}
+	&__inclusive {
+		background-image: url("../images/inclusiv.svg");
+		order: 4;
+	}
+	&__adapt {
+		background-image: url("../images/adapt.svg");
+		
+	}
+	&__clean {
+		background-image: url(../images/clean.svg);
+		order: 3;
+	}
+	&__copyright {
+		background-image: url("../images/copyright.svg");
+		order: 5;
 	}
 }
 
