--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -316,7 +316,7 @@ section {
 		}
 		@media (min-width: 1440px) {
 			justify-content: space-between;
-			gap: 1000px;
+			gap: 100px;
 		}
 		&-item {
 			flex-basis: 290px;
@@ -370,6 +370,12 @@ section {
 
 		text-transform: uppercase;
 		margin-bottom: 40px;
+		@media (min-width: 480px) {
+			font-size: 40px;
+		}
+		@media (min-width: 1440px) {
+			font-size: 50px;
+		}
 	}
 	&__card {
 		max-width: 252px;
@@ -377,6 +383,9 @@ section {
 		display: flex;
 		flex-direction: column;
 		padding: 20px 14px;
+		@media (min-width: 1440px) {
+			max-width: 366px;
+		}
 		&-img {
 			width: 155px;
 			height: 92px;
@@ -385,6 +394,11 @@ section {
 			padding: 5px 18px 12px;
 			align-self: center;
 			margin-bottom: 30px;
+			@media (min-width: 1440px) {
+				width: 213px;
+				height: 126px;
+				padding: 6px 26px 15px;
+			}
 		}
 		&-data {
 			display: flex;
@@ -393,6 +407,9 @@ section {
 			font-size: 600;
 			font-size: 14px;
 			margin-bottom: 23px;
+			@media (min-width: 1440px) {
+				font-size: 16px;
+			}
 		}
 		&-client {
 			line-height: 120%;
@@ -403,35 +420,59 @@ section {
 		&-title {
 			font-size: 16px;
 			line-height: 120%;
+			@media (min-width: 1440px) {
+				font-size: 18px;
+			}
 		}
 	}
-	&__arrow{
+	&__arrow {
 		width: 26px;
 		height: 26px;
 
 		display: block;
-		background-image: url('../images/arrow.svg');
+		background-image: url("../images/arrow.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center center;
 		border: none;
 		outline: none;
 		position: absolute;
-		top:50%;
+		top: 50%;
 		transform: translateY(-50%);
-		&-left{
+		z-index: 10;
+		padding: 0;
+		border: none;
+		outline: none;
+		&-left {
 			left: 0;
 		}
-		&-right{
-			right:0;
+		&-right {
+			right: 0;
 			transform: rotate(180deg) translateY(50%);
+		}
+		&.portfolio__aria-disabled {
+			opacity: 0.3;
+			pointer-events: none;
 		}
 	}
 
-	&__slider{
+	&__slider {
 		position: relative;
-		max-width: 290px;
+
 		margin: 0 auto;
+		@media (min-width: 480px) {
+			max-width: 340px;
+		}
+		@media (min-width: 768px) {
+			max-width: 688px;
+		}
+		@media (min-width: 998px) {
+			max-width: 690px;
+		}
+		@media (min-width: 1440px) {
+			max-width: 825px;
+		}
+		
 	}
 }
 
