--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -187,6 +187,7 @@ section {
 	&__container {
 		@media (min-width: 480px) {
 			display: flex;
+			width: 100%;
 		}
 	}
 	&__photo {
@@ -196,7 +197,7 @@ section {
 		//overflow: hidden;
 		margin-bottom: 20px;
 		@media (min-width: 480px) {
-			width: 50%;
+			width: 50% !important;
 			margin-right: 15px;
 			margin-bottom: 0;
 		}
@@ -214,6 +215,7 @@ section {
 			flex-direction: column;
 			justify-content: center;
 			align-items: flex-start;
+			max-width: 50%;
 		}
 	}
 	&__title {
@@ -472,8 +474,97 @@ section {
 		@media (min-width: 1440px) {
 			max-width: 825px;
 		}
-		
 	}
+}
+
+.page__overlay {
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-color: rgba($color: #000000, $alpha: 0.3);
+	overflow: auto;
+	padding: 15px;
+	display: flex;
+	z-index: 19;
+	display: none;
+}
+
+.modal {
+	background-color: #fff;
+	margin: auto auto !important;
+	border-radius: 14px;
+	border: 1px solid #646464;
+	padding: 40px 10px;
+	min-width: 290px;
+	z-index: 20;
+	position: relative;
+	&__title {
+		font-weight: bold;
+		font-size: 14px;
+		line-height: 120%;
+
+		text-transform: uppercase;
+		max-width: 224px;
+		margin: 0 auto 30px;
+		text-align: center;
+	}
+	&__label {
+		position: relative;
+		display: block;
+		margin-bottom: 20px;
+		&-text {
+			position: absolute;
+			top: 5px;
+			left: 15px;
+			font-weight: bold;
+			font-size: 12px;
+			line-height: 130%;
+			color: #303030;
+		}
+		&:last-of-type{
+			margin-bottom: 40px !important;
+		}
+	}
+	&__input {
+		border: 1px solid #afafaf;
+		border-radius: 6px;
+		width: 100%;
+		height: 74px;
+		padding: 0 15px;
+		font-weight: normal;
+		font-size: 12px;
+		line-height: 130%;
+
+	}
+	&__group{
+		margin-bottom: 40px;
+		&-label{
+			display: block;
+			
+			&:not(:last-child){
+				margin-bottom: 15px;
+			}
+		}
+	}
+	&__text{
+		margin-left: 15px;
+	};
+	.present__order-btn{
+		display: block;
+		margin: 0 auto;
+	}
+
+	&__close{
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		border: none;
+		background-color: transparent;
+		outline: none;
+	}
+
 }
 
 @import "media";
